--- a/styles.css
+++ b/styles.css
@@ -1,399 +1,412 @@
 /* General Styles */
 body,
 html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Arial", sans-serif;
 }
 
 .container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /* Navbar */
 header {
-    background: #282c34;
-    color: #61dafb;
-    /* padding: 1rem 0; */
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+  background: #282c34;
+  color: #61dafb;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  height: 75px;
+  align-content: center;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* position: relative; */
-    padding: 5px 15px;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo h1 {
-    margin: 0;
-    font-size: 2rem;
+  margin: 0;
+  font-size: 2rem;
 }
 
-.nav-links {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-    /* text-align: right; */
-    margin-top: 35px;
+ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  padding-bottom: 0%;
 }
 
 .nav-links a {
-    color: #61dafb;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    transition: background 0.3s ease;
+  color: #61dafb;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: all 0.3s ease;
 }
 
 .nav-links a:hover {
-    background: #61dafb;
-    color: #282c34;
-    border-radius: 5px;
+  background: #61dafb;
+  color: #282c34;
+  border-radius: 5px;
 }
 
 .burger {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 21px;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 21px;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .burger div {
-    width: 25px;
-    height: 3px;
-    background: #61dafb;
-    border-radius: 3px;
+  width: 25px;
+  height: 3px;
+  background: #61dafb;
+  border-radius: 3px;
 }
 
 /* Home Section */
 .home-section {
-    background: linear-gradient(to right, #4b6cb7, #182848);
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  scroll-margin-top: 75px;
+  background: linear-gradient(to right, #4b6cb7, #182848);
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 50px 0; /* Added padding to ensure proper spacing */
+}
+.home-text {
+  text-align: left;
 }
 
 .home-text .h2 {
-    font-size: 35px;
-    margin-top: 15px;
-    text-align: left;
+  font-size: 35px;
+  margin-top: 15px;
 }
 
 .home-text p {
-    font-size: 30px;
-    text-align: left;
+  font-size: 30px;
 }
 
 .home-text .highlight {
-    color: #61dafb;
-    font-size: 35px;
+  color: #61dafb;
+  font-size: 35px;
 }
 
 .home-text .btn {
-    margin-top: 1rem;
-    padding: 0.75rem 1.5rem;
-    background: #61dafb;
-    color: #282c34;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background 0.3s ease;
+  margin-top: 1rem;
+  padding: 0.75rem 1.5rem;
+  background: #61dafb;
+  color: #282c34;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background 0.3s ease;
 }
 
 .home-text .btn:hover {
-    color: #fff;
-    background-color: #282c34;
+  color: #fff;
+  background-color: #282c34;
 }
 
 .home-image img {
-    width: 300px;
-    border-radius: 50%;
-    margin-top: 2rem;
+  width: 300px;
 }
 
 /* About Section */
 
 .profile-pic {
-    width: 200px;
-    height: auto;
-    border-radius: 50%;
-    margin-bottom: 20px;
-  }
-  
-  .about-section {
-    background: linear-gradient(to left, #4b6cb7, #182848);
-    padding: 40px 0;
-    text-align: center;
-  }
-  
-  .about-section h2 {
-    color: white;
-  }
-  
-  .about-section p {
-    color: white;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  #toggleBtn{
-    margin-top: 1rem;
-    padding: 0.75rem 1.5rem;
-    background: #61dafb;
-    color: #282c34;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 18px;
-    transition: background 0.3s ease;
-    border: none;
-  }
-  #toggleBtn:hover{
-    background: #182848;
-    color: white;
-  }
+  width: 200px;
+  height: auto;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.about-section {
+  scroll-margin-top: 75px;
+  background: linear-gradient(to left, #4b6cb7, #182848);
+  padding: 40px 0;
+  text-align: center;
+  color: white;
+}
+
+.hidden {
+  display: none;
+}
+#toggleBtn {
+  margin-top: 1rem;
+  padding: 0.75rem 1.5rem;
+  background: #61dafb;
+  color: #282c34;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 18px;
+  transition: background 0.3s ease;
+  border: none;
+}
+#toggleBtn:hover {
+  background: #182848;
+  color: white;
+}
 
 /* Projects Section */
-.projects-section{
-    background: linear-gradient(to right, #4b6cb7, #182848);
-    color: #fff;
-    padding: 22px 0px;
+.projects-section {
+  scroll-margin-top: 75px;
+  background: linear-gradient(to right, #4b6cb7, #182848);
+  color: #fff;
+  padding: 22px 0px;
 }
-.projects-section h2{
-    text-align: center;
+.projects-section h1 {
+  text-align: center;
 }
 .projects-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    
-  }
-  
-  .project-card {
-    background: #182848;
-    color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin: 20px;
-    max-width: 300px;
-    padding: 20px;
-  }
-  
-  .project-card .card-content {
-    text-align: center;
-  }
-  
-  .project-card h3 {
-    color: white;
-  }
-  
-  .project-card p {
-    color: white;
-  }
-  
-  .project-card .project-link {
-    display: inline-block;
-    margin-top: 10px;
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
-  }
-  .project-link:hover{
-    background-color: white;
-    color: #182848;
-  }
-  .project-card:hover{
-    transform: translateY(-5px);
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.project-card {
+  background: #182848;
+  color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  max-width: 350px;
+  padding: 20px;
+  transition: transform 0.3s ease;
+  will-change: transform;
+  cursor: pointer;
+}
+
+.project-card .card-content {
+  text-align: center;
+}
+
+.project-card h3 {
+  color: white;
+}
+
+.project-card p {
+  color: white;
+}
+
+.project-card .project-link {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+}
+.project-link:hover {
+  background-color: white;
+  color: #182848;
+}
+.project-card:hover {
+  transform: translateY(-5px);
+}
 /* Contact Section */
 
 .contact-section {
-    padding: 2rem;
-    background: linear-gradient(to left, #4b6cb7, #182848);
-    color: #fff;
+  scroll-margin-top: 75px;
+  padding: 2rem;
+  background: linear-gradient(to left, #4b6cb7, #182848);
+  color: #fff;
 }
 
-.contact-section .container {
-    max-width: 600px;
-    margin: 0 auto;
-    text-align: center;
+.contact-section .contact-form-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.contact-section h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
+#contactForm,
+.contact-info {
+  width: 50%;
+}
+.contact-section h1 {
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .contact-form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .contact-form {
-    width: 100%;
+  width: 100%;
 }
 
 .form-group {
-    margin-bottom: 1rem;
-    text-align: left;
+  margin-bottom: 1rem;
+  text-align: left;
 }
 
 .form-group label {
-    display: block;
-    margin-bottom: 0.5rem;
+  display: block;
+  margin-bottom: 0.5rem;
 }
 
 .form-group input,
 .form-group textarea {
-    width: 100%;
-    padding: 0.5rem;
-    border: none;
-    border-radius: 5px;
-    font-size: 1rem;
-    background: #fff;
+  width: 100%;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  background: #fff;
 }
 
 .submit-btn {
-    padding: 0.7rem;
-    border: none;
-    background: #61dafb;
-    color: #333;
-    font-size: 1.1rem;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s ease;
+  padding: 0.7rem;
+  border: none;
+  background: #61dafb;
+  color: #333;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease;
 }
 
 .submit-btn:hover {
-    background: #4b6cb7;
-    color: #fff;
+  background: #4b6cb7;
+  color: #fff;
 }
 
 .contact-info {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .contact-info h3 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .contact-info ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .contact-info ul li {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .contact-info ul li a {
-    color: #61dafb;
-    text-decoration: none;
-    transition: color 0.3s ease;
+  color: #61dafb;
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .contact-info ul li a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 /* Footer */
 footer {
-    background: #182848;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
+  background: #182848;
+  color: #fff;
+  text-align: center;
+  padding: 1rem 0;
 }
 
 footer p {
-    margin: 0;
+  margin: 0;
 }
 
 footer .social-links {
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
 }
 
 footer .social-links a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 1.5rem;
-    margin: 0 0.5rem;
-    transition: color 0.3s ease;
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  transition: color 0.3s ease;
 }
 
 footer .social-links a:hover {
-    color: #4b6cb7;
+  color: #4b6cb7;
 }
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-    }
-
-    .nav-links.nav-active {
-        display: flex;
-    }
-
-    .nav-links li {
-        margin: 10px 0;
-    }
-
-    .burger {
-        display: flex;
-        text-align: right;
-    }
-
-.burger.toggle .line1 {
-    transform: rotate(-45deg) translate(-5px, 6px);
-}
-
-.burger.toggle .line2 {
-    opacity: 0;
-}
-
-.burger.toggle .line3 {
-    transform: rotate(45deg) translate(-5px, -6px);
-}
-
-.home-section .home-content {
+  .home-main {
     flex-direction: column;
-}
-.home-section{
+  }
+  header {
+    height: auto;
+    padding: 15px 0;
     display: flex;
+  }
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+  .nav-links {
+    display: none;
     flex-direction: column;
-    justify-content: center;
-}
+    text-align: center;
+  }
 
-.home-section .home-text{
+  .nav-links.nav-active {
+    display: flex;
+  }
+
+  .nav-links li {
+    margin: 10px 0;
+  }
+
+  .burger {
+    display: flex;
+    text-align: right;
+  }
+
+  .burger.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+  }
+
+  .burger.toggle .line2 {
+    opacity: 0;
+  }
+
+  .burger.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
+
+  .home-section .home-content {
+    flex-direction: column;
+  }
+
+  .home-section .home-text {
     padding: 0px 15px;
-}
-.home-section .home-text,
-.home-section .home-image {
+  }
+  .home-section .home-text,
+  .home-section .home-image {
     max-width: 100%;
-}
-.home-text p {
+  }
+  .home-text p {
     word-spacing: 0;
-}
+  }
 
+  .projects-container {
+    justify-content: center;
+  }
 }
